// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add aircraft tests add aircraft and update aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane",
  "documents": [],
  "equipment": "test",
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "totalPercentageHours": 5,
    "usablePercentageHours": 3,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "yearOfManufacture": 2000,
}
`;

exports[`Db add aircraft tests add aircraft and update aircraft 2`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane 2",
  "documents": [],
  "equipment": "test",
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "totalPercentageHours": 5,
    "usablePercentageHours": 3,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "yearOfManufacture": 2000,
}
`;

exports[`Db document tests add document and update document 1`] = `
{
  "alertDaysBefore": 30,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "documentId": "TST",
  "endDate": "2023-10-01",
  "hardLimit": 0,
  "softLimit": 7,
  "startDate": "2023-10-01",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db document tests add document and update document 2`] = `
{
  "alertDaysBefore": 15,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "documentId": "TST2",
  "endDate": "2023-10-02",
  "hardLimit": 1,
  "softLimit": 5,
  "startDate": "2023-10-02",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query Get aircrafts tests getAllAircraft returns all active aircraft in the db 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2010,
  },
]
`;

exports[`Db query Get aircrafts tests getAllAircraft returns all aircraft in the db 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "hourlyRateEur": 228,
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceTach": 5180,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceTach": 5230,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "registration": "OH-P28",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2005,
  },
]
`;

exports[`Db query Get aircrafts tests getAllAircraftByRegistration returns the active aircraft in the db 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "radio",
      "endDate": "2025-08-31",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-09-01",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "arc",
      "endDate": "2026-03-15",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-03-16",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "insurance",
      "endDate": "2025-06-06",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-06-07",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "finavia",
      "endDate": "2025-12-31",
      "hardLimit": null,
      "softLimit": 0,
      "startDate": "2025-01-01",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "equipment": "SDFGY/S",
  "hourlyRateEur": 216,
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceTach": 4709,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 4778,
    "nextMaintenanceType": "100h",
    "totalPercentageHours": 10,
    "usablePercentageHours": 8,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "registration": "OH-STL",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "yearOfManufacture": 2007,
}
`;
